# CrumbleSrc

./: .gitignore  BulletPortalColliderTheory.txt  CMakeLists.txt  CrumbleSrc.sln  README.md
CrumbleSrc/: AABB.cpp  AABB.h  Chunk.cpp  Chunk.h  CrumbleSrc.cpp  CrumbleSrc.vcxproj  CrumbleSrc.vcxproj.filters  FMath.cpp  FMath.h  FileUtil.h  Player.cpp  Player.h  ShaderConstructor.cpp  ShaderProgram.cpp  ShaderProgram.h  Transform.cpp  Transform.h  World.cpp  World.h  glad.c  globals.h  resource.h
CrumbleSrc/Shaders/: texColour.frag
includes/glad/: glad.h
src/: AABB.cpp  AABB.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Entity.cpp  Entity.h  EntityFoo.cpp  EntityFoo.h  FMath.cpp  FMath.h  Faces.h  FileUtil.cpp  FileUtil.h  GameRenderer.cpp  GameRenderer.h  GamerRenderer.cpp  GamerRenderer.h  Input.cpp  Input.h  Pathfinder.cpp  Pathfinder.h  PhysicsWorld.cpp  PhysicsWorld.h  Plane.cpp  Plane.h  Player.cpp  Player.h  Portal.cpp  Portal.h  Scene.cpp  Scene.h  ShaderConstructor.h  StandardEntityComponents.cpp  StandardEntityComponents.h  StandardEntitySystems.cpp  StandardEntitySystems.h  Transform.cpp  Transform.h  World.cpp  (+8 more)
src/Physics/: PhysicsWorld.cpp  PhysicsWorld.h  bcOverlappingPairCache.cpp  bcOverlappingPairCache.h  bcSimpleBroadphase.cpp  bcSimpleBroadphase.h  btSimpleBroadphaseCopy.cpp
src/Rendering/: GameRenderer.cpp  GameRenderer.h  ShaderConstructor.cpp  ShaderConstructor.h  ShaderProgram.cpp  ShaderProgram.h
src/Shader/: ShaderProgram.cpp  ShaderProgram.h
src/Shaders/: portalStencil.frag  texColour.frag  texColour.vert
